2012-07-16  6.7.8-4 Cristy  <quetzlzacatenango@image...>
  * sRGB color gradients should be in a non-linear colorspace.

2012-07-15  6.7.8-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-3, SVN revision 8675.

2012-07-14  6.7.8-3 Glenn Randers-Pehrson <glennrp@image...>
  * Always write a color PNG when image->colorspace is sRGB.

2012-07-08  6.7.8-3 Cristy  <quetzlzacatenango@image...>
  * Attenuate random noise (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21387).
  * Return linear grayscale for gradient:white-black.
  * Promote linear grayscale to linear RGB when compositing.
  * gradient:white-black is sRGB whereas gradient:'icc-color(rgb,255,255,255)-
    icc-color(rgb,0,0,0)' is linear RGB whereas gradient:'gray(255)-gray(0)' is
    linear grayscale.
  * Revert sigmoidal contrast define (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=22&t=21415).

2012-07-08  6.7.8-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-2, SVN revision 8621.

2012-07-02  6.7.8-2 Cristy  <quetzlzacatenango@image...>
  * Set the colorspace to linear gray when reading intensity values (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21362).
  * Change Lab encoding to permit blurring, resize, etc.
    (signed A and B channel values stored using a 50% bias)
  * Don't overrun pixel buffer on inverse fourier for odd image widths.

2012-07-04  6.7.8-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-1, SVN revision 8595.

2012-07-02  6.7.8-1 Cristy  <quetzlzacatenango@image...>
  * A single argument -stereo option now works as documented (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21348).
  * The -separate option returns channels as linear grayscale.
  * Remove the sRGB color profile when converting to grayscale (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21355).
